@@ -1,17 +1,18 @@
 package com.github.scribejava.apis;
 
+import com.github.scribejava.apis.service.FacebookOAuth20ServiceImpl;
 import com.github.scribejava.core.builder.api.DefaultApi20;
 import com.github.scribejava.core.extractors.OAuth2AccessTokenJsonExtractor;
 import com.github.scribejava.core.extractors.TokenExtractor;
 import com.github.scribejava.core.model.OAuth2AccessToken;
 import com.github.scribejava.core.model.OAuthConfig;
 import com.github.scribejava.core.model.OAuthConstants;
+import com.github.scribejava.core.oauth.OAuth20Service;
 import com.github.scribejava.core.utils.OAuthEncoder;
 import com.github.scribejava.core.utils.Preconditions;
 
-/***
+/**
  * Facebook v2.5 API
- *
  */
 public class FacebookApi extends DefaultApi20 {
 
@@ -22,6 +23,7 @@ public class FacebookApi extends DefaultApi20 {
     }
 
     private static class InstanceHolder {
+
         private static final FacebookApi INSTANCE = new FacebookApi();
     }
 
@@ -55,4 +57,10 @@ public class FacebookApi extends DefaultApi20 {
         }
         return sb.toString();
     }
+
+    @Override
+    public OAuth20Service createService(OAuthConfig config) {
+        return new FacebookOAuth20ServiceImpl(this, config);
+    }
+
 }
