@@ -41,7 +41,7 @@ public class TokenTest {
 
     @Test
     public void shouldReturnUrlParam() {
-        final Token actual = new OAuth1AccessToken("acccess", "secret",
+        final OAuth1Token actual = new OAuth1RequestToken("acccess", "secret",
                 "user_id=3107154759&screen_name=someuser&empty=&=");
         assertEquals("someuser", actual.getParameter("screen_name"));
         assertEquals("3107154759", actual.getParameter("user_id"));
